test/modules/errors/duplicateModules.chpl
module M {
  writeln("In M.init()");
}
